syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  string userId = 2;
  string role = 3;
}
